[package]
name = "rust"
version = "0.1.0"
authors = ["yuizho <yuizho3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[[bin]]
name = "abc081a"
path = "src/abc/081/a.rs"

[[bin]]
name = "abc081b"
path = "src/abc/081/b.rs"

[[bin]]
name = "abc086a"
path = "src/abc/086/a.rs"

[[bin]]
name = "abc087b"
path = "src/abc/087/b.rs"

[[bin]]
name = "abc099c"
path = "src/abc/099/c.rs"

[[bin]]
name = "edpca"
path = "src/edpc/a.rs"

[[bin]]
name = "edpcc"
path = "src/edpc/c.rs"

[[bin]]
name = "edpcd"
path = "src/edpc/d.rs"
