[package]
name = "rust"
version = "0.1.0"
authors = ["yuizho <yuizho3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[[bin]]
name = "abc049c"
path = "src/abc/049/c.rs"

[[bin]]
name = "abc051b"
path = "src/abc/051/b.rs"

[[bin]]
name = "abc055b"
path = "src/abc/055/b.rs"

[[bin]]
name = "abc060b"
path = "src/abc/060/b.rs"

[[bin]]
name = "abc061c"
path = "src/abc/061/c.rs"

[[bin]]
name = "abc065b"
path = "src/abc/065/b.rs"

[[bin]]
name = "abc070b"
path = "src/abc/070/b.rs"

[[bin]]
name = "abc075b"
path = "src/abc/075/b.rs"

[[bin]]
name = "abc079c"
path = "src/abc/079/c.rs"

[[bin]]
name = "abc081a"
path = "src/abc/081/a.rs"

[[bin]]
name = "abc081b"
path = "src/abc/081/b.rs"

[[bin]]
name = "abc083b"
path = "src/abc/083/b.rs"

[[bin]]
name = "abc085b"
path = "src/abc/085/b.rs"

[[bin]]
name = "abc085c"
path = "src/abc/085/c.rs"

[[bin]]
name = "abc086a"
path = "src/abc/086/a.rs"

[[bin]]
name = "abc086c"
path = "src/abc/086/c.rs"

[[bin]]
name = "abc087b"
path = "src/abc/087/b.rs"

[[bin]]
name = "abc087c"
path = "src/abc/087/c.rs"

[[bin]]
name = "abc088b"
path = "src/abc/088/b.rs"

[[bin]]
name = "abc096c"
path = "src/abc/096/c.rs"

[[bin]]
name = "abc098c"
path = "src/abc/098/c.rs"

[[bin]]
name = "abc099c"
path = "src/abc/099/c.rs"

[[bin]]
name = "abc122c"
path = "src/abc/122/c.rs"

[[bin]]
name = "arc004a"
path = "src/arc/004/a.rs"

[[bin]]
name = "edpca"
path = "src/edpc/a.rs"

[[bin]]
name = "edpcc"
path = "src/edpc/c.rs"

[[bin]]
name = "edpcd"
path = "src/edpc/d.rs"
